<resources>
    <string name="app_name">AcademicApp</string>
    <string name="welcome_to_gla_university">Welcome To GLA University</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="please_wait_image_is_being_uploading">Please Wait, Image is being uploading!!</string>
    <string name="subject">Subject</string>
    <string name="choose_function_image">Choose Function Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_pdf">Select pdf</string>
    <string name="upload_pdf">Upload pdf</string>
    <string name="name_of_faculty">Faculty Name</string>
    <string name="address_of_faculty">Faculty Address</string>
    <string name="contact_of_faculty">Faculty Contact</string>
    <string name="qualification">Faculty Qualification</string>
    <string name="faculty_domain">Faculty Domain</string>
    <string name="upload_12th_marksheet">Upload 12th Marksheet</string>
    <string name="upload_10th_marksheet">Upload 10th Marksheet</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="please_wait_pdf_is_being_uploading">Please wait, pdf is being uploading!</string>
    <string name="faculty_last_name">Faculty Last Name</string>
    <string name="faculty_first_name">Faculty First Name</string>
    <string name="update_faculty">Update Faculty</string>
    <string name="logout">Logout</string>
    <string name="colon">\": \"</string>
    <string-array name="functions">
        <item>Republic Day</item>
        <item>Independence Day</item>
        <item>Gandhi Jayanti</item>
        <item>Diwali</item>
        <item>Christmas</item>
        <item>Sports</item>
    </string-array>
    <string-array name="subjects">
        <item>Software Engineering</item>
        <item>Operating System</item>
        <item>Networking</item>
        <item>DBMS</item>
        <item>Object Oriented Programming</item>
        <item>Microprocessor</item>
        <item>Maths</item>
        <item>English</item>
    </string-array>
    <string-array name="qualifications">
        <item>B.Tech</item>
        <item>M.Tech</item>
        <item>BCA</item>
        <item>MCA</item>
        <item>B.Sc</item>
        <item>M.Sc</item>
        <item>BE</item>
        <item>Phd</item>
    </string-array>
    <string-array name="domains">
        <item>Computer Science</item>
        <item>Electrical</item>
        <item>Electronics</item>
        <item>Mechanical</item>
        <item>Maths</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>English</item>
    </string-array>
</resources>