<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/faculty_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/profile"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_name_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_name"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_profile_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/name_of_faculty"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/faculty_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_address_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_home"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_name_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/address_of_faculty"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/faculty_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_contact_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_contact"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_address_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/contact_of_faculty"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/faculty_contact_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_qualifications_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_subject"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_contact_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/qualification"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <MultiAutoCompleteTextView
                android:id="@+id/faculty_qualifications_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="none"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_domain_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_baseline_domain_24"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_qualifications_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/faculty_domain"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <MultiAutoCompleteTextView
                android:id="@+id/faculty_domain_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="none"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_12_marksheet_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_marksheet"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_domain_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/upload_12th_marksheet"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/faculty_12_marksheet_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/faculty_10_marksheet_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_marksheet"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/faculty_12_marksheet_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/upload_10th_marksheet"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/faculty_10_marksheet_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:editable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/upload_faculty_button"
            app:layout_constraintTop_toBottomOf="@+id/faculty_10_marksheet_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_faculty"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/template_button"
            app:layout_constraintTop_toBottomOf="@+id/upload_faculty_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_faculty"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
