<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subject_type_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_subject"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/subject"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/subject_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subject_pdf_layout"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="70dp"
            app:startIconDrawable="@drawable/ic_pdf"
            app:errorIconDrawable="@drawable/error_icon"
            app:layout_constraintTop_toBottomOf="@+id/subject_type_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="20dp"
            android:hint="@string/select_pdf"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_pdf_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/upload_pdf_button"
            app:layout_constraintTop_toBottomOf="@+id/subject_pdf_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/upload_pdf"
            android:layout_marginTop="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
